Added Step Counter with Start/Pause/Reset button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CapstoneHealth</string>
+    <string name="title_activity_step_counter">StepCounter</string>
 </resources>
